# mcc

./: .env.example  .gitignore  CLAUDE.md  Makefile  PROJECT_PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: f0f984e8f53d_initial_schema.py
app/: main.py
app/agents/: architect.py  base.py  coder.py  context.py  mention.py  orchestrator.py  registry.py  reviewer.py  tester.py
app/api/: __init__.py  agent_memory.py  agents.py  auth.py  conversations.py  deps.py  health.py  issues.py  projects.py  pull_requests.py  webhooks.py  websocket.py
app/core/: config.py  exceptions.py  security.py
app/db/: models.py  seed.py  session.py
app/models/: agent.py  auth.py  common.py  conversation.py  github.py  memory.py  openrouter.py  project.py  user.py
app/services/: agent_service.py  agent_status.py  budget_service.py  conversation_service.py  dispatch_service.py  github_client.py  github_service.py  memory_service.py  openrouter.py  token_tracker.py  webhook_service.py
docker/: Caddyfile  Dockerfile.backend  Dockerfile.frontend
docs/: API_SPEC.md  DB_SCHEMA.md  TECH_SPECS.md  UI_WIREFRAMES.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
tests/: conftest.py  test_agent_status.py  test_auth.py  test_budget_service.py  test_context.py  test_dispatch.py  test_health.py  test_memory_service.py  test_mention.py  test_models.py  test_registry.py  test_security.py
(+23 files in other folders)
